src/objects/Movimiento_IR__c.object
<CustomObject>
    <fields>
        <fullName>MIR_CAS_ENVIADO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIR CAS ENVIADO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIR_DAT_FECHACIERRE__c</fullName>
        <label>FECHA_CIERRE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_APELLIDOS__c</fullName>
        <label>APELLIDOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_CLIENTE_VALOR__c</fullName>
        <label>CLIENTE VALOR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_CONF_PENDIENTE__c</fullName>
        <label>CONF PENDIENTE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_DNI__c</fullName>
        <label>DNI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_GESTOR_RECLAMA__c</fullName>
        <label>GESTOR RECLAMA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_GESTOR_SINIESTRO__c</fullName>
        <label>GESTOR SINIESTRO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_ID_CASO__c</fullName>
        <label>ID CASO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_ID_PROCEDENCIA__c</fullName>
        <label>ID PROCEDENCIA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_NOMBRE__c</fullName>
        <label>NOMBRE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_NUM_SERVICIO__c</fullName>
        <label>NUM SERVICIO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_NUM_SINIESTRO__c</fullName>
        <label>NUM SINIESTRO</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_OPERACION__c</fullName>
        <label>MIR_TXT_OPERACION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_RECLA_NO_CERRADA__c</fullName>
        <label>RECLA NO CERRADA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_SERV_INDEMNI__c</fullName>
        <label>SERV INDEMNI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_SINI_NO_CERRADO__c</fullName>
        <label>SINI NO CERRADO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIR_TXT_TELEFONO__c</fullName>
        <label>TELEFONO</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Movimiento IR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MIR_TXT_DNI__c</columns>
        <columns>MIR_TXT_NUM_SINIESTRO__c</columns>
        <columns>MIR_TXT_GESTOR_SINIESTRO__c</columns>
        <columns>MIR_TXT_TELEFONO__c</columns>
        <columns>MIR_TXT_NUM_SERVICIO__c</columns>
        <columns>MIR_TXT_SERV_INDEMNI__c</columns>
        <columns>MIR_CAS_ENVIADO__c</columns>
        <columns>MIR_TXT_NOMBRE__c</columns>
        <columns>MIR_TXT_OPERACION__c</columns>
        <columns>MIR_TXT_RECLA_NO_CERRADA__c</columns>
        <columns>MIR_TXT_SINI_NO_CERRADO__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Movimiento_IR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movimientos IR</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>